--- a/midterm/assets/css/common.css
+++ b/midterm/assets/css/common.css
@@ -1,100 +1,101 @@
 * {
-    margin: 0;
-    padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
 /**********************************************************/
 /*                      Header Section                    */
 /**********************************************************/
 #header-frame {
-    position: relative;
-    width: 100%;
-    height: 90px;
-    margin: 5px 0;
+	position: relative;
+	width: 100%;
+	height: 90px;
+	margin: 5px 0;
 }
 
 #header-frame * {
-    height: 100%;
+	height: 100%;
 }
 
 #logo-frame {
-    position: absolute;
-    width: 200px;
-    top: 0px;
-    left: 2%;
+	position: absolute;
+	width: 200px;
+	top: 0px;
+	left: 4%;
 }
 
 #logo {
-    object-fit: cover;
+	object-fit: cover;
 }
 
 #nav-bar-frame {
-    position: absolute;
-    top: 0px;
-    right: 2%;
-    width: 500px;
+	position: absolute;
+	top: 0px;
+	right: 2%;
+	width: 500px;
 }
 
 #nav-bar {
-    position: absolute;
-    top: 50%;
-    right: 0;
-    transform: translateY(-50%);
-    height: 20%;
-    text-align: right;
+	position: absolute;
+	top: 50%;
+	right: 0;
+	transform: translateY(-50%);
+	height: 20%;
+	text-align: right;
 }
 
 .nav-bar-item {
-    display: inline;
-    margin: 0 25px;
+	display: inline;
+	margin: 0 25px;
 }
 
 .link {
-    text-decoration: none;
-    text-transform: uppercase;
-    font-family: 'Rubik', sans-serif;
-    color: black;
+	text-decoration: none;
+	text-transform: uppercase;
+	font-family: "Rubik", sans-serif;
+	color: black;
 }
 
-.active-link, .link:hover {
-    opacity: 0.4;
+.active-link,
+.link:hover {
+	opacity: 0.4;
 }
 
 /**********************************************************/
 /*                      Footer Section                    */
 /**********************************************************/
 #footer-frame {
-    position: relative;
-    height: 180px;
-    width: 100%;
-    margin-top: 50px;
-    background-color: #F7F7F8;
+	position: relative;
+	height: 180px;
+	width: 100%;
+	margin-top: 50px;
+	background-color: #f7f7f8;
 }
 
 #address-frame {
-    position: absolute;
-    width: 600px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: black;
-    opacity: 0.6;
+	position: absolute;
+	width: 600px;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	color: black;
+	opacity: 0.6;
 }
 
 .contact {
-    text-align: center;
-    font-family: 'Rubik', sans-serif;
-    font-size: 0.9em;
-    margin: 5px;
+	text-align: center;
+	font-family: "Rubik", sans-serif;
+	font-size: 0.9em;
+	margin: 5px;
 }
 
 .watermark {
-    text-align: center;
-    font-family: 'Rubik', sans-serif;
-    font-size: 0.6em;
-    margin: 3px 0 3px;
+	text-align: center;
+	font-family: "Rubik", sans-serif;
+	font-size: 0.6em;
+	margin: 3px 0 3px;
 }
 
 .copyright {
-    margin-top: 15px;
+	margin-top: 15px;
 }
