--- a/midterm/assets/css/homepage.css
+++ b/midterm/assets/css/homepage.css
@@ -17,10 +17,10 @@
 
 .home-intro-msg-frame {
     position: absolute;
-    right: 0;
+    right: 0%;
     transform: translateY(-50%);
     width: 600px;
-    height: 4.5em;
+    height: 3.5em;
 }
 
 #home-intro-msg-sm-frame {
@@ -114,7 +114,7 @@
     height: 95%;
 }
 
-.dish img {
+.dish-img {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -124,4 +124,11 @@
     max-width: 100% - 10px;
     max-height: 98%;
     border-radius: 3px;
+    z-index: -1;
+}
+
+.dish-name {
+    margin-top: 5px;
+    font: bold 1.1em 'Shadows Into Light', cursive;
+    letter-spacing: 1px;
 }
