--- a/final/assets/css/treant/collapsable.css
+++ b/final/assets/css/treant/collapsable.css
@@ -81,10 +81,10 @@ body {
 	border: 1px solid rgba(255, 255, 255, 0.3);
 	border-radius: 3px;
 }
-.Treant > .node img {
+/* .Treant > .node img {
 	width: 100%;
 	height: 100%;
-}
+} */
 
 .Treant .collapse-switch {
 	width: 100%;
